Add html wireframe structure.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sylwia M. Bialczak</title>
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700|Play:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+
+<div class="container">
+  
+  <!-- HEADER -->
+  <div class="row">
+    <div class="col-md-2">
+      <img src="img/sylwia.jpeg" class="img-responsive" id="img-sylwia">
+    </div>
+    <div class="col-md-10 text-right">
+      <h1>Sylwia M. Bialczak</h1>
+      <h2>Web Developer</h2>
+    </div>
+  </div>
+  
+  <!-- Main image -->
+
+  <div class="row">
+    <div class="col-sm-12">
+      <img src="img/woodleywonderworks.jpg" class="img-responsive" id="img-rocks">
+    </div>
+  </div>
+
+  <!-- Portfolio -->
+  <div class="row">
+    <!-- TITLE -->
+    <div class="col-sm-12 text-left">
+      <h2>Featured Work</h2>
+    </div>
+    <!-- PORTFOLIO COLUMNS -->
+    <div class="col-sm-4 text-center text-block">
+      <img src="http://placehold.it/300x300">
+      <h3>App name</h3>
+      <a href="#">link to app</a>
+    </div>
+
+    <div class="col-sm-4 text-center text-block">
+      <img src="http://placehold.it/300x300">
+      <h3>App name</h3>
+      <a href="#">link to app</a>
+    </div>
+
+    <div class="col-sm-4 text-center text-block">
+      <img src="http://placehold.it/300x300">
+      <h3>App name</h3>
+      <a href="#">link to app</a>
+    </div>
+  </div> <!--/.row  -->
+
+</div><!-- /.container -->
+
 
 </body>
 </html>
