--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sylwia M. Bialczak</title>
-  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700|Play:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700%7CPlay:400,700' rel='stylesheet' type='text/css'>
+
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
 <div class="container">
-  
   <!-- HEADER -->
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-xs-3">
       <img src="img/sylwia.jpeg" class="img-responsive" id="img-sylwia">
     </div>
-    <div class="col-md-10 text-right">
+    <div class="col-xs-9 text-right text-uppercase">
       <h1>Sylwia M. Bialczak</h1>
-      <h2>Web Developer</h2>
+      <h3>Web Developer</h3>
+      <hr id="hr-header">
     </div>
+    
   </div>
   
   <!-- Main image -->
-
   <div class="row">
     <div class="col-sm-12">
       <img src="img/woodleywonderworks.jpg" class="img-responsive" id="img-rocks">
@@ -33,33 +36,68 @@
   </div>
 
   <!-- Portfolio -->
-  <div class="row">
+  <div class="row text-center">
     <!-- TITLE -->
     <div class="col-sm-12 text-left">
       <h2>Featured Work</h2>
     </div>
-    <!-- PORTFOLIO COLUMNS -->
-    <div class="col-sm-4 text-center text-block">
-      <img src="http://placehold.it/300x300">
+  </div> <!--/.row  -->
+
+  <!-- PORTFOLIO COLUMNS -->
+  <div class="row text-center">
+    <div class="col-sm-4 text-center">
+      <img src="http://placehold.it/400x400" class="center-block img-responsive">
       <h3>App name</h3>
       <a href="#">link to app</a>
     </div>
 
     <div class="col-sm-4 text-center text-block">
-      <img src="http://placehold.it/300x300">
+      <img src="http://placehold.it/400x400" class="img-responsive">
       <h3>App name</h3>
       <a href="#">link to app</a>
     </div>
 
     <div class="col-sm-4 text-center text-block">
-      <img src="http://placehold.it/300x300">
+      <img src="http://placehold.it/400x400" class="img-responsive">
       <h3>App name</h3>
       <a href="#">link to app</a>
     </div>
   </div> <!--/.row  -->
 
+  <div class="row text-center">
+    <div class="col-sm-4 text-center">
+      <img src="http://placehold.it/400x500" class="center-block img-responsive">
+      <h3>App name</h3>
+      <a href="#">link to app</a>
+    </div>
+
+    <div class="col-sm-4 text-center text-block">
+      <img src="http://placehold.it/400x500" class="img-responsive">
+      <h3>App name</h3>
+      <a href="#">link to app</a>
+    </div>
+
+    <div class="col-sm-4 text-center text-block">
+      <img src="http://placehold.it/400x500" class="img-responsive">
+      <h3>App name</h3>
+      <a href="#">link to app</a>
+    </div>
+  </div> <!--/.row  -->
 </div><!-- /.container -->
 
-
+  <footer class="footer text-center">
+    <div class="container">
+      <div class="social-icons">
+        <a class="fa fa-github" href="https://github.com/argoncode"></a>
+        <a class="fa fa-rss" href="http://blog.argoncode.com/feed.xml"></a>
+        <a class="fa fa-twitter" href="https://twitter.com/argoncode"></a>
+        <a class="fa fa-facebook" href="https://facebook.com/sylwia.bialczak"></a>
+        <a class="fa fa-google-plus" href="https://plus.google.com/+SylwiaBialczak/posts"></a>
+        <a class="fa fa-envelope" href="mailto:argoncode18@gmail.com"></a>
+        <a class="fa fa-key" href="https://keybase.io/argon18z"></a>
+        <a class="fa fa-linkedin" href="https://www.linkedin.com/in/sylwiambialczak"></a>
+      </div>
+    </div>      
+  </footer>
 </body>
 </html>
