--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
             <div class="col-sm-6 col-md-12">
               <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
               <h3>App name</h3>
-              <a href="#">link to app</a>
+              <a class="col" href="#">link to app</a>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4 col-sm-6">
+        <div class="col-sm-6 col-md-4">
           <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
           <h3>App name</h3>
           <a href="#">link to app</a>
           
           <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
           <h3>App name</h3>
-          <a href="#">link to app</a>           
+          <a class="col" href="#">link to app</a>           
         </div>
 
-        <div class="col-md-4 col-sm-6">
+        <div class="col-sm-6 col-md-4">
           <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
           <h3>App name</h3>
           <a href="#">link to app</a>
