Add nicer images and modals.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div class="row">
       <div class="col-xs-3">
-        <img src="img/sylwia.jpeg" class="img-responsive" id="img-sylwia">
+        <img src="img/logo.jpeg" class="img-responsive" id="img-logo">
       </div>
       <div class="col-xs-9 text-right text-uppercase">
         <h1>Sylwia M. Bialczak</h1>
@@ -41,45 +41,48 @@
     </div> <!--/.row  -->
 
     <!-- PORTFOLIO COLUMNS -->
-
-
-      <div class="row text-center" id="last-row">       
-
-        <div class="col-sm-12 col-md-4">
-          <div class="row">
-            <div class="col-sm-6 col-md-12">
-              <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
-              <h3>App name</h3>
-              <a href="#">link to app</a>
-            </div>
-            <div class="col-sm-6 col-md-12">
-              <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
-              <h3>App name</h3>
-              <a class="col" href="#">link to app</a>
-            </div>
+    <div class="row text-center" id="last-row">       
+      <div class="col-sm-12 col-md-4">
+        <div class="row">
+          <div class="col-sm-6 col-md-12">
+          <img src="img/project1.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project1">
+            <h3>This page</h3>
+            <a href="https://github.com/ArgonCode/FEND_1_Portfolio">source</a><!-- private repo -->
+            <a href="http://static.argoncode.com/udacity/portfolio">demo</a>
+          </div>
+          <div class="col-sm-6 col-md-12">
+            <img src="img/project2.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project2">
+            <h3>Awesome App</h3>
+            <a href="http://github.com/argoncode/">source</a>
+            <a href="http://static.argoncode.com/udacity/">demo</a>
           </div>
         </div>
+      </div>
 
-        <div class="col-sm-6 col-md-4">
-          <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
-          <h3>App name</h3>
-          <a href="#">link to app</a>
-          
-          <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
-          <h3>App name</h3>
-          <a class="col" href="#">link to app</a>           
-        </div>
+      <div class="col-sm-6 col-md-4">
+        <img src="img/project3.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project3">
+        <h3>App app away</h3>
+        <a href="http://github.com/argoncode/">source</a>
+        <a href="http://static.argoncode.com/udacity/">demo</a>
 
-        <div class="col-sm-6 col-md-4">
-          <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
-          <h3>App name</h3>
-          <a href="#">link to app</a>
-          
-          <img src="http://placehold.it/400x400?text=nested" class="center-block img-responsive">
-          <h3>App name</h3>
-          <a href="#">link to app</a>           
-        </div>      
+        <img src="img/project4.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project4">
+        <h3>Hey hey</h3>
+        <a href="http://github.com/argoncode/">source</a>
+        <a href="http://static.argoncode.com/udacity/">demo</a>         
+      </div>
+
+      <div class="col-sm-6 col-md-4">
+        <img src="img/project5.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project5">
+        <h3>Fun Sunday</h3>
+        <a href="http://github.com/argoncode/">source</a>
+        <a href="http://static.argoncode.com/udacity/">demo</a>
+
+        <img src="img/project6.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project6">
+        <h3>Totally Fake</h3>
+        <a href="http://github.com/argoncode/">source</a>
+        <a href="http://static.argoncode.com/udacity/">demo</a>         
       </div>      
+    </div><!-- /.row -->
   </div><!-- /.container -->
 
   <footer class="footer text-center">
@@ -96,5 +99,231 @@
       </div>
     </div><!-- /.container -->
   </footer>
+
+  <!-- Modal Project1 -->
+  <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">This Page</h4>
+        </div>
+        <div class="modal-body">
+          <img class="img-responsive" src="img/project1.jpg">
+                      <div class="row">
+              <div class="col-sm-6">
+                <h3>Tool used</h3>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6">
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                  <li>Bootstrap.js</li>
+                </ul>
+              </div>
+              <div class="col-sm-6">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco.
+              </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal Project2 -->
+  <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Awesome App</h4>
+        </div>
+        <div class="modal-body">
+          <img class="img-responsive" src="img/project2.jpg">
+            <div class="row">
+              <div class="col-sm-6">
+                <h3>Tool used</h3>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6">
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                  <li>Bootstrap.js</li>
+                </ul>
+              </div>
+              <div class="col-sm-6">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco.
+              </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal Project3 -->
+  <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">App app away</h4>
+        </div>
+        <div class="modal-body">
+          <img class="img-responsive" src="img/project3.jpg">
+            <div class="row">
+              <div class="col-sm-6">
+                <h3>Tool used</h3>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6">
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                  <li>Bootstrap.js</li>
+                </ul>
+              </div>
+              <div class="col-sm-6">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco.
+              </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal Project4 -->
+  <div class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Hay hay</h4>
+        </div>
+        <div class="modal-body">
+          <img class="img-responsive" src="img/project4.jpg">
+            <div class="row">
+              <div class="col-sm-6">
+                <h3>Tool used</h3>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6">
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                  <li>Bootstrap.js</li>
+                </ul>
+              </div>
+              <div class="col-sm-6">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco.
+              </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal Project5 -->
+  <div class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Fun Sunday</h4>
+        </div>
+        <div class="modal-body">
+          <img class="img-responsive" src="img/project5.jpg">
+            <div class="row">
+              <div class="col-sm-6">
+                <h3>Tool used</h3>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6">
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                  <li>Bootstrap.js</li>
+                </ul>
+              </div>
+              <div class="col-sm-6">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco.
+              </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal Project6 -->
+  <div class="modal fade" id="project6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Totally Fake</h4>
+        </div>
+        <div class="modal-body">
+          <img class="img-responsive" src="img/project6.jpg">
+            <div class="row">
+              <div class="col-sm-6">
+                <h3>Tool used</h3>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6">
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                  <li>Bootstrap.js</li>
+                </ul>
+              </div>
+              <div class="col-sm-6">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco.
+              </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
