Remove font awesome SASS and LESS.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sylwia M. Bialczak</title>
-  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700%7CPlay:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700%7CPlay:400,700' rel='stylesheet'>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
@@ -45,7 +45,7 @@
       <div class="col-sm-12 col-md-4">
         <div class="row">
           <div class="col-sm-6 col-md-12">
-          <img src="img/project1.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project1">
+            <img src="img/project1.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project1">
             <h3>This page</h3>
             <a href="https://github.com/ArgonCode/FEND_1_Portfolio">source</a><!-- private repo -->
             <a href="http://static.argoncode.com/udacity/portfolio">demo</a>
@@ -109,27 +109,27 @@
         </div>
         <div class="modal-body">
           <img class="img-responsive" src="img/project1.jpg">
-                      <div class="row">
-              <div class="col-sm-6">
-                <h3>Tool used</h3>
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <h3>Tool used</h3>
             </div>
+          </div>
 
-            <div class="row">
-              <div class="col-sm-6">
-                <ul>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>Bootstrap</li>
-                  <li>Bootstrap.js</li>
-                </ul>
-              </div>
-              <div class="col-sm-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco.
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>Bootstrap.js</li>
+              </ul>
             </div>
+            <div class="col-sm-6">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco.
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
@@ -146,27 +146,27 @@
         </div>
         <div class="modal-body">
           <img class="img-responsive" src="img/project2.jpg">
-            <div class="row">
-              <div class="col-sm-6">
-                <h3>Tool used</h3>
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <h3>Tool used</h3>
             </div>
+          </div>
 
-            <div class="row">
-              <div class="col-sm-6">
-                <ul>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>Bootstrap</li>
-                  <li>Bootstrap.js</li>
-                </ul>
-              </div>
-              <div class="col-sm-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco.
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>Bootstrap.js</li>
+              </ul>
             </div>
+            <div class="col-sm-6">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco.
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
@@ -183,27 +183,27 @@
         </div>
         <div class="modal-body">
           <img class="img-responsive" src="img/project3.jpg">
-            <div class="row">
-              <div class="col-sm-6">
-                <h3>Tool used</h3>
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <h3>Tool used</h3>
             </div>
+          </div>
 
-            <div class="row">
-              <div class="col-sm-6">
-                <ul>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>Bootstrap</li>
-                  <li>Bootstrap.js</li>
-                </ul>
-              </div>
-              <div class="col-sm-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco.
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>Bootstrap.js</li>
+              </ul>
             </div>
+            <div class="col-sm-6">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco.
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
@@ -220,27 +220,27 @@
         </div>
         <div class="modal-body">
           <img class="img-responsive" src="img/project4.jpg">
-            <div class="row">
-              <div class="col-sm-6">
-                <h3>Tool used</h3>
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <h3>Tool used</h3>
             </div>
+          </div>
 
-            <div class="row">
-              <div class="col-sm-6">
-                <ul>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>Bootstrap</li>
-                  <li>Bootstrap.js</li>
-                </ul>
-              </div>
-              <div class="col-sm-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco.
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>Bootstrap.js</li>
+              </ul>
             </div>
+            <div class="col-sm-6">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco.
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
@@ -257,27 +257,27 @@
         </div>
         <div class="modal-body">
           <img class="img-responsive" src="img/project5.jpg">
-            <div class="row">
-              <div class="col-sm-6">
-                <h3>Tool used</h3>
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <h3>Tool used</h3>
             </div>
+          </div>
 
-            <div class="row">
-              <div class="col-sm-6">
-                <ul>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>Bootstrap</li>
-                  <li>Bootstrap.js</li>
-                </ul>
-              </div>
-              <div class="col-sm-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco.
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>Bootstrap.js</li>
+              </ul>
             </div>
+            <div class="col-sm-6">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco.
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
@@ -294,27 +294,27 @@
         </div>
         <div class="modal-body">
           <img class="img-responsive" src="img/project6.jpg">
-            <div class="row">
-              <div class="col-sm-6">
-                <h3>Tool used</h3>
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <h3>Tool used</h3>
             </div>
+          </div>
 
-            <div class="row">
-              <div class="col-sm-6">
-                <ul>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>Bootstrap</li>
-                  <li>Bootstrap.js</li>
-                </ul>
-              </div>
-              <div class="col-sm-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco.
-              </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>Bootstrap.js</li>
+              </ul>
             </div>
+            <div class="col-sm-6">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco.
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-themecolor" data-dismiss="modal">Close</button>
