Fix code shown by validators.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sylwia M. Bialczak</title>
-  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700%7CPlay:400,700' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700%7CPlay:400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
+
+  <!-- FAVICONS -->
+  <link rel="shortcut icon" type="image/png" href="img/favicon.ico">
+  <!-- TODO -->
 </head>
 <body>
 
@@ -16,7 +20,7 @@
     <!-- HEADER -->
     <div class="row">
       <div class="col-xs-3">
-        <img src="img/logo.jpeg" class="img-responsive" id="img-logo">
+        <img src="img/logo.jpeg" class="img-circle img-responsive" id="img-logo" alt="logo">
       </div>
       <div class="col-xs-9 text-right text-uppercase">
         <h1>Sylwia M. Bialczak</h1>
@@ -28,7 +32,7 @@
     <!-- Main image -->
     <div class="row">
       <div class="col-sm-12">
-        <img src="img/woodleywonderworks.jpg" class="img-responsive" id="img-rocks">
+        <img src="img/keyboard.jpg" class="img-responsive" id="img-keyboard" alt="keyboard">
       </div>
     </div>
 
@@ -45,13 +49,13 @@
       <div class="col-sm-12 col-md-4">
         <div class="row">
           <div class="col-sm-6 col-md-12">
-            <img src="img/project1.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project1">
+            <img src="img/project1.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project1" alt="#">
             <h3>This page</h3>
             <a href="https://github.com/ArgonCode/FEND_1_Portfolio">source</a><!-- private repo -->
             <a href="http://static.argoncode.com/udacity/portfolio">demo</a>
           </div>
           <div class="col-sm-6 col-md-12">
-            <img src="img/project2.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project2">
+            <img src="img/project2.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project2" alt="#">
             <h3>Awesome App</h3>
             <a href="http://github.com/argoncode/">source</a>
             <a href="http://static.argoncode.com/udacity/">demo</a>
@@ -60,24 +64,24 @@
       </div>
 
       <div class="col-sm-6 col-md-4">
-        <img src="img/project3.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project3">
+        <img src="img/project3.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project3" alt="#">
         <h3>App app away</h3>
         <a href="http://github.com/argoncode/">source</a>
         <a href="http://static.argoncode.com/udacity/">demo</a>
 
-        <img src="img/project4.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project4">
+        <img src="img/project4.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project4" alt="#">
         <h3>Hey hey</h3>
         <a href="http://github.com/argoncode/">source</a>
         <a href="http://static.argoncode.com/udacity/">demo</a>         
       </div>
 
       <div class="col-sm-6 col-md-4">
-        <img src="img/project5.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project5">
+        <img src="img/project5.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project5" alt="#">
         <h3>Fun Sunday</h3>
         <a href="http://github.com/argoncode/">source</a>
         <a href="http://static.argoncode.com/udacity/">demo</a>
 
-        <img src="img/project6.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project6">
+        <img src="img/project6.jpg" class="center-block img-responsive" data-toggle="modal" data-target="#project6" alt="#">
         <h3>Totally Fake</h3>
         <a href="http://github.com/argoncode/">source</a>
         <a href="http://static.argoncode.com/udacity/">demo</a>         
@@ -101,14 +105,14 @@
   </footer>
 
   <!-- Modal Project1 -->
-  <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel">This Page</h4>
+          <h4 class="modal-title">This Page</h4>
         </div>
         <div class="modal-body">
-          <img class="img-responsive" src="img/project1.jpg">
+          <img class="img-responsive" src="img/project1.jpg" alt="#">
           <div class="row">
             <div class="col-sm-6">
               <h3>Tool used</h3>
@@ -138,14 +142,14 @@
     </div>
   </div>
   <!-- Modal Project2 -->
-  <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel">Awesome App</h4>
+          <h4 class="modal-title">Awesome App</h4>
         </div>
         <div class="modal-body">
-          <img class="img-responsive" src="img/project2.jpg">
+          <img class="img-responsive" src="img/project2.jpg" alt="#">
           <div class="row">
             <div class="col-sm-6">
               <h3>Tool used</h3>
@@ -175,14 +179,14 @@
     </div>
   </div>
   <!-- Modal Project3 -->
-  <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel">App app away</h4>
+          <h4 class="modal-title">App app away</h4>
         </div>
         <div class="modal-body">
-          <img class="img-responsive" src="img/project3.jpg">
+          <img class="img-responsive" src="img/project3.jpg" alt="#">
           <div class="row">
             <div class="col-sm-6">
               <h3>Tool used</h3>
@@ -212,14 +216,14 @@
     </div>
   </div>
   <!-- Modal Project4 -->
-  <div class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="project4" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel">Hay hay</h4>
+          <h4 class="modal-title">Hay hay</h4>
         </div>
         <div class="modal-body">
-          <img class="img-responsive" src="img/project4.jpg">
+          <img class="img-responsive" src="img/project4.jpg" alt="#">
           <div class="row">
             <div class="col-sm-6">
               <h3>Tool used</h3>
@@ -249,14 +253,14 @@
     </div>
   </div>
   <!-- Modal Project5 -->
-  <div class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="project5" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel">Fun Sunday</h4>
+          <h4 class="modal-title">Fun Sunday</h4>
         </div>
         <div class="modal-body">
-          <img class="img-responsive" src="img/project5.jpg">
+          <img class="img-responsive" src="img/project5.jpg" alt="#">
           <div class="row">
             <div class="col-sm-6">
               <h3>Tool used</h3>
@@ -286,14 +290,14 @@
     </div>
   </div>
   <!-- Modal Project6 -->
-  <div class="modal fade" id="project6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="project6" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel">Totally Fake</h4>
+          <h4 class="modal-title">Totally Fake</h4>
         </div>
         <div class="modal-body">
-          <img class="img-responsive" src="img/project6.jpg">
+          <img class="img-responsive" src="img/project6.jpg" alt="#">
           <div class="row">
             <div class="col-sm-6">
               <h3>Tool used</h3>
